# stm32f429-rust-abgabe

./: Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
docs/: Quellen.txt
ili9341-controller/ili9341-rs-parallel_gpio/: Cargo.toml
src/: main.rs
src/ili9341_controller/: mod.rs
src/ili9341_controller/spi/: mod.rs
src/scheduler/: mod.rs
src/scheduler/context_switch/: mod.rs
