[package]
name = "ili9341"
version = "0.2.0"
description = "A platform agnostic driver to interface with the ILI9341 (ald ILI9340C) TFT LCD display"
edition = "2018"


[dependencies]
embedded-hal = "0.2.3"

[dependencies.embedded-graphics]
optional = true
version = "=0.6.0-alpha.2"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
